@@ -1,3 +1,4 @@
+16 May 2012 Do initial CPU reset when MAINSIZE is changed - Kevin Leonard
 11 May 2012 CMPSC_2012 - Fish
 02 Oct 2011 STSI made aware of facilities LOGICAL_PARTITION and VIRTUAL_MACHINE
             for reporting system information - Harold
